# cuda-plugin-examples

./: .gitignore  .gitmodules  Cargo.toml  README.md  compose.env  docker-compose.yml  dot.env
.github/workflows/: ci.yaml
candle-wrapper/: Cargo.toml
candle-wrapper/src/: bert.rs  lib.rs  llm.rs  loader.rs  models.rs  whisper.rs
candle-wrapper/src/llm/: config.rs  error.rs
embedding-runner/: Cargo.toml  build.rs
embedding-runner/protobuf/embedding/: embedding_arg.proto  embedding_operation.proto  embedding_result.proto
embedding-runner/src/: embedding.rs  jobworkerp.rs  lib.rs  main.rs  model.rs
llm-runner/: Cargo.toml  build.rs
llm-runner/protobuf/llm/: llm_arg.proto  llm_operation.proto
llm-runner/src/: lib.rs  llm.rs  main.rs
llm-runner/src/llm/: model.rs  tokenizer.rs
protobuf/: embedding.proto  llm.proto  whisper.proto
whisper-runner/: Cargo.toml  build.rs
whisper-runner/protobuf/whisper/: whisper_arg.proto  whisper_operation.proto  whisper_result.proto
whisper-runner/src/: audio.rs  lib.rs  main.rs  runner.rs  utils.rs
whisper-runner/src/audio/: input.rs  trans.rs
whisper-runner/src/runner/: whisper.rs
whisper-runner/src/runner/whisper/: audio.rs  model.rs  multilingual.rs  segment.rs
