[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["sutr"]
name = "cuda plugin examples"
description = "Examples of how to create the `jobworkerp-rs` runner plugin with the GPU."
license = "MIT"

[workspace]
resolver = "2"
members = [
    "modules/command-utils",
    "modules/jobworkerp-client",
    "candle-wrapper",
    "whisper-runner",
    "llm-runner",
    "embedding-runner",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"

[workspace.dependencies]
#accelerate-src = { version = "0.3" } # for mac
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
base64 = "0.21"
bincode = "1"
byteorder = "1"
bytes = "1"
candle-core = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
    "cudnn",
], rev = "32eb56d6b318a3bdbb516237cf89522cb60bbcf2"}
candle-datasets = { git = "https://github.com/huggingface/candle.git", rev = "32eb56d6b318a3bdbb516237cf89522cb60bbcf2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
], rev = "32eb56d6b318a3bdbb516237cf89522cb60bbcf2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
    "flash-attn",
], rev = "32eb56d6b318a3bdbb516237cf89522cb60bbcf2" } # "accelerate" for mac
clap = { version = "4", features = ["derive"] }
debug_stub_derive = "0.3"
dotenvy = "0.15"
envy = "0.4"
# TODO: Switch back to the official gemm implementation once it has caught up.
hf-hub = { version = "0.3", features = ["tokio"] }
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
#intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"] }
itertools = "*"
log = "0.4"
#metal = { git = "https://github.com/ivarflakstad/metal-rs.git", features = [
#    "mps",
#] }
num_cpus = "1"
num-traits = "0.2"
once_cell = "1"
#parquet = { version = "45" }
prost = "0.12"
prost-build = "0.12"
rand = "0.8"
regex = "1"
reqwest = "0.11"
rubato = "0.14"
safetensors = "0.4"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_plain = "1"
serde_json = "1"
strum_macros = "0.26"
tempfile = "3.8"
thiserror = "1"
tokenizers = { version = "0.15", features = ["onig"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
url = "2"
wav = "1"
zip = { version = "0.6", default-features = false }
