[package]
name = "candle-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
debug_stub_derive = { workspace = true }
envy = { workspace = true }
hf-hub = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
