[package]
name = "candle-wrapper"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]

anyhow = { workspace = true }
async-trait = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
debug_stub_derive = { workspace = true }
envy = { workspace = true }
hf-hub = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }

[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-core/cudnn",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
flash-attn = ["candle-transformers/flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
