[package]
name = "embedding-runner"
edition = "2021"
version.workspace = true
authors.workspace = true
description = "simple sentence-embedding runner"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "embedding-test"
path = "src/main.rs"


[dependencies]
command-utils = { path = "../modules/command-utils" }
jobworkerp-client = { path = "../modules/jobworkerp-client" }
candle-wrapper = { path = "../candle-wrapper" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
hf-hub = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
[features]
default = []
cuda = [
    "candle-core/cuda",
    "candle-core/cudnn",
    "candle-nn/cuda",
    "candle-transformers/cuda",
]
flash-attn = ["candle-transformers/flash-attn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
