[package]
name = "whisper-runner"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "whisper-test"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command-utils = { path = "../modules/command-utils" }
candle-wrapper = { path = "../candle-wrapper" }

#accelerate-src = { workspace = true } #for mac
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
candle-core = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }            # "accelerate" for mac
clap = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }
hound = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
symphonia = { version = "0.5", "features" = ["all"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true, features = ["log"] }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
# deprecated
#wav = { workspace = true }


[build-dependencies]
prost-build = { workspace = true }
